# textclap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  THIRD_PARTY.md  build.rs
.github/workflows/: ci.yml
benches/: bench_audio_encode.rs  bench_mel.rs  bench_text_encode.rs
ci/: miri_sb.sh  miri_tb.sh
docs/superpowers/plans/: 2026-04-26-textclap-clap-inference-implementation.md
docs/superpowers/specs/: 2026-04-25-textclap-clap-inference-design.md
examples/: audio_window_to_clap.rs  index_and_search.rs
models/: MODELS.md  MODELS.sha256
src/: audio.rs  clap.rs  clap_model.rs  error.rs  lib.rs  mel.rs  options.rs  text.rs
src/simd/: mod.rs  neon.rs  scalar.rs  wasm_simd128.rs  x86_avx2.rs  x86_avx512.rs
tests/: clap_integration.rs
tests/fixtures/: MODELS.md  README.md  golden_audio_emb.npy  golden_onnx_io.json  golden_params.json  golden_text_embs.npy  inspect_onnx.py  regen_golden.py
