[package]
name = "textclap"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rust ONNX inference library for LAION CLAP-HTSAT-unfused"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Findit-AI/textclap"
keywords = ["clap", "audio", "embedding", "onnx", "ml"]
categories = ["multimedia::audio", "science"]
include = [
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-*",
    "COPYRIGHT",
]

[dependencies]
ort        = "2.0.0-rc.12"
rustfft    = "6"
tokenizers = "0.20"
thiserror  = "2"
serde      = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.5"
rubato    = "0.16"
npyz      = "0.8"
hound     = "3"

[features]
default = []
serde   = ["dep:serde"]

[lints.rust]
rust_2018_idioms      = "warn"
single_use_lifetimes  = "warn"
unexpected_cfgs       = { level = "warn", check-cfg = ['cfg(all_tests)', 'cfg(tarpaulin)'] }

[package.metadata.docs.rs]
all-features  = true
rustdoc-args  = ["--cfg", "docsrs"]

[[bench]]
name    = "bench_mel"
harness = false

[[bench]]
name    = "bench_audio_encode"
harness = false

[[bench]]
name    = "bench_text_encode"
harness = false

[[example]]
name              = "audio_window_to_clap"
required-features = []

[[example]]
name              = "index_and_search"
required-features = []
